--- a/notritionVendorsAPP/View/AccountDetail.storyboard
+++ b/notritionVendorsAPP/View/AccountDetail.storyboard
@@ -137,6 +137,7 @@
                         <outlet property="userAvatar" destination="jB1-UH-Nl9" id="q9m-8B-oco"/>
                         <outlet property="username" destination="V60-Bw-FiI" id="Dea-7R-GDc"/>
                         <segue destination="sdt-M8-uS0" kind="show" identifier="AccountToComment" id="bge-Oj-lBl"/>
+                        <segue destination="VV2-md-XX2" kind="push" identifier="AccountToPassword" id="XA3-IY-4mP"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="khJ-py-MN8" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -151,6 +152,113 @@
             </objects>
             <point key="canvasLocation" x="1797" y="2723"/>
         </scene>
+        <!--Change Password Controller-->
+        <scene sceneID="j9s-L1-oTw">
+            <objects>
+                <viewController id="VV2-md-XX2" customClass="ChangePasswordController" customModule="notritionVendorsAPP" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="d83-hg-c5k">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="xWr-BT-uLD">
+                                <rect key="frame" x="10" y="74" width="355" height="290"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5fl-nM-ANw">
+                                        <rect key="frame" x="0.0" y="0.0" width="355" height="20"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="20" id="Fg1-MQ-sl8"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Current Password:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UdE-LK-qb6">
+                                        <rect key="frame" x="0.0" y="30" width="355" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="uxQ-3K-mm2"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="5nZ-3Q-9Ai">
+                                        <rect key="frame" x="0.0" y="70" width="355" height="40"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="40" id="rZd-IK-eyL"/>
+                                        </constraints>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
+                                        <connections>
+                                            <action selector="currentPass:" destination="ZBW-qH-eFs" eventType="editingDidEnd" id="RyO-vg-N7V"/>
+                                        </connections>
+                                    </textField>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="New Password:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aNf-JB-dyG">
+                                        <rect key="frame" x="0.0" y="120" width="355" height="30"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Akq-vM-Yc3">
+                                        <rect key="frame" x="0.0" y="160" width="355" height="40"/>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
+                                    </textField>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Confirm Password:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dhv-NI-qbh">
+                                        <rect key="frame" x="0.0" y="210" width="355" height="30"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="eIR-du-5h8">
+                                        <rect key="frame" x="0.0" y="250" width="355" height="40"/>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
+                                    </textField>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="eIR-du-5h8" firstAttribute="height" secondItem="5nZ-3Q-9Ai" secondAttribute="height" id="2Gf-Or-b37"/>
+                                    <constraint firstItem="dhv-NI-qbh" firstAttribute="height" secondItem="UdE-LK-qb6" secondAttribute="height" id="G7U-vg-AWW"/>
+                                    <constraint firstItem="Akq-vM-Yc3" firstAttribute="height" secondItem="5nZ-3Q-9Ai" secondAttribute="height" id="KIq-2b-6x1"/>
+                                    <constraint firstItem="aNf-JB-dyG" firstAttribute="height" secondItem="UdE-LK-qb6" secondAttribute="height" id="Sw9-cI-d0P"/>
+                                    <constraint firstItem="5fl-nM-ANw" firstAttribute="width" secondItem="xWr-BT-uLD" secondAttribute="width" id="vxp-q8-Vch"/>
+                                </constraints>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="4n8-kz-QPT" firstAttribute="trailing" secondItem="xWr-BT-uLD" secondAttribute="trailing" constant="10" id="6nB-fF-Oei"/>
+                            <constraint firstItem="xWr-BT-uLD" firstAttribute="leading" secondItem="4n8-kz-QPT" secondAttribute="leading" constant="10" id="MFQ-uU-0OS"/>
+                            <constraint firstItem="xWr-BT-uLD" firstAttribute="top" secondItem="4n8-kz-QPT" secondAttribute="top" constant="10" id="Sll-ZM-0Wv"/>
+                            <constraint firstItem="xWr-BT-uLD" firstAttribute="centerX" secondItem="4n8-kz-QPT" secondAttribute="centerX" id="Xiw-Cu-RN0"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="4n8-kz-QPT"/>
+                    </view>
+                    <toolbarItems/>
+                    <navigationItem key="navigationItem" id="nyT-B9-pVQ">
+                        <barButtonItem key="rightBarButtonItem" systemItem="done" id="73i-FK-kDT">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <action selector="doneBtnPressed:" destination="VV2-md-XX2" id="g80-we-8CL"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <outlet property="confirmPass" destination="eIR-du-5h8" id="R90-Mi-zWF"/>
+                        <outlet property="currentPass" destination="5nZ-3Q-9Ai" id="evH-vu-c5v"/>
+                        <outlet property="doneBtnPressed" destination="73i-FK-kDT" id="TYO-u1-mwN"/>
+                        <outlet property="newPass" destination="Akq-vM-Yc3" id="lng-9k-7ZV"/>
+                        <outlet property="notification" destination="5fl-nM-ANw" id="ziG-x3-Cos"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="yJH-Vd-TL8" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="ZBW-qH-eFs" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="2297" y="3107"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="wdg-sQ-6R3">
             <objects>
@@ -159,6 +267,8 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="5JM-zS-T40">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" red="0.25490196079999999" green="0.66274509800000003" blue="0.68235294120000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="barTintColor" red="0.25490196079999999" green="0.66274509800000003" blue="0.68235294120000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
