--- a/notritionVendorsAPP/View/AccountDetail.storyboard
+++ b/notritionVendorsAPP/View/AccountDetail.storyboard
@@ -161,19 +161,25 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="xWr-BT-uLD">
-                                <rect key="frame" x="10" y="74" width="355" height="290"/>
+                                <rect key="frame" x="10" y="74" width="355" height="320"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5fl-nM-ANw">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tjy-XQ-MMY">
                                         <rect key="frame" x="0.0" y="0.0" width="355" height="20"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5fl-nM-ANw">
+                                        <rect key="frame" x="0.0" y="30" width="355" height="20"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="20" id="Fg1-MQ-sl8"/>
                                         </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                        <color key="textColor" red="1" green="0.60959718238881622" blue="0.14799078597821425" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Current Password:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UdE-LK-qb6">
-                                        <rect key="frame" x="0.0" y="30" width="355" height="30"/>
+                                        <rect key="frame" x="0.0" y="60" width="355" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="uxQ-3K-mm2"/>
                                         </constraints>
@@ -182,7 +188,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="5nZ-3Q-9Ai">
-                                        <rect key="frame" x="0.0" y="70" width="355" height="40"/>
+                                        <rect key="frame" x="0.0" y="100" width="355" height="40"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="40" id="rZd-IK-eyL"/>
                                         </constraints>
@@ -194,25 +200,25 @@
                                         </connections>
                                     </textField>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="New Password:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aNf-JB-dyG">
-                                        <rect key="frame" x="0.0" y="120" width="355" height="30"/>
+                                        <rect key="frame" x="0.0" y="150" width="355" height="30"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Akq-vM-Yc3">
-                                        <rect key="frame" x="0.0" y="160" width="355" height="40"/>
+                                        <rect key="frame" x="0.0" y="190" width="355" height="40"/>
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                     </textField>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Confirm Password:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dhv-NI-qbh">
-                                        <rect key="frame" x="0.0" y="210" width="355" height="30"/>
+                                        <rect key="frame" x="0.0" y="240" width="355" height="30"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="eIR-du-5h8">
-                                        <rect key="frame" x="0.0" y="250" width="355" height="40"/>
+                                        <rect key="frame" x="0.0" y="280" width="355" height="40"/>
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
@@ -220,8 +226,10 @@
                                 </subviews>
                                 <constraints>
                                     <constraint firstItem="eIR-du-5h8" firstAttribute="height" secondItem="5nZ-3Q-9Ai" secondAttribute="height" id="2Gf-Or-b37"/>
+                                    <constraint firstItem="Tjy-XQ-MMY" firstAttribute="width" secondItem="5fl-nM-ANw" secondAttribute="width" id="4ta-Cz-IJS"/>
                                     <constraint firstItem="dhv-NI-qbh" firstAttribute="height" secondItem="UdE-LK-qb6" secondAttribute="height" id="G7U-vg-AWW"/>
                                     <constraint firstItem="Akq-vM-Yc3" firstAttribute="height" secondItem="5nZ-3Q-9Ai" secondAttribute="height" id="KIq-2b-6x1"/>
+                                    <constraint firstItem="Tjy-XQ-MMY" firstAttribute="height" secondItem="5fl-nM-ANw" secondAttribute="height" id="L31-IK-Zg0"/>
                                     <constraint firstItem="aNf-JB-dyG" firstAttribute="height" secondItem="UdE-LK-qb6" secondAttribute="height" id="Sw9-cI-d0P"/>
                                     <constraint firstItem="5fl-nM-ANw" firstAttribute="width" secondItem="xWr-BT-uLD" secondAttribute="width" id="vxp-q8-Vch"/>
                                 </constraints>
@@ -249,8 +257,10 @@
                     <connections>
                         <outlet property="confirmPass" destination="eIR-du-5h8" id="R90-Mi-zWF"/>
                         <outlet property="currentPass" destination="5nZ-3Q-9Ai" id="evH-vu-c5v"/>
+                        <outlet property="doneBtn" destination="73i-FK-kDT" id="IhG-WQ-hZb"/>
                         <outlet property="newPass" destination="Akq-vM-Yc3" id="lng-9k-7ZV"/>
                         <outlet property="notification" destination="5fl-nM-ANw" id="ziG-x3-Cos"/>
+                        <outlet property="titleNotification" destination="Tjy-XQ-MMY" id="1HG-AK-z0S"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="yJH-Vd-TL8" userLabel="First Responder" sceneMemberID="firstResponder"/>
