--- a/notritionVendorsAPP/Controller/detail food/view/ActionCell.xib
+++ b/notritionVendorsAPP/Controller/detail food/view/ActionCell.xib
@@ -29,7 +29,7 @@
                                     <constraint firstAttribute="height" constant="50" id="yEh-ti-kcS"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <state key="normal" title="View more in shop">
+                                <state key="normal" title="View more">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <color key="titleShadowColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
