--- a/notritionVendorsAPP/View/Base.lproj/Main.storyboard
+++ b/notritionVendorsAPP/View/Base.lproj/Main.storyboard
@@ -1014,7 +1014,7 @@
         <!--Account-->
         <scene sceneID="c04-h2-HTT">
             <objects>
-                <viewController storyboardIdentifier="AccountDetailStoryboardID" id="cUB-LF-Hav" customClass="AccountDetailController" customModule="notritionVendorsAPP" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="cUB-LF-Hav" customClass="AccountDetailController" customModule="notritionVendorsAPP" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="yKN-VE-2fJ">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -1141,12 +1141,12 @@
                         <segue destination="Hhs-xT-Xtj" kind="show" identifier="AccountToComment" id="fsU-XT-5Au"/>
                         <segue destination="Hor-Rr-AA6" kind="show" identifier="AccountToPassword" id="k5x-uK-kas"/>
                         <segue destination="Fu9-kg-UPj" kind="show" identifier="AccountToEditInfor" id="PgS-Jk-3Ew"/>
-                        <segue destination="KhO-Z4-gOn" kind="push" id="Zwz-lU-fLG"/>
+                        <segue destination="KhO-Z4-gOn" kind="show" identifier="AccountToFeedback" id="Zwz-lU-fLG"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="lpk-he-fh5" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-360.86956521739131" y="2998.6607142857142"/>
+            <point key="canvasLocation" x="-1455" y="2999"/>
         </scene>
         <!--Edit Infor User Controller-->
         <scene sceneID="7Fy-3z-Gjo">
@@ -1414,7 +1414,7 @@
                 <viewControllerPlaceholder storyboardName="Comment" referencedIdentifier="CommentStoryboardID" id="Hhs-xT-Xtj" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xPv-Zd-KoX" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1518.840579710145" y="2758.9285714285711"/>
+            <point key="canvasLocation" x="-549" y="2626"/>
         </scene>
         <!--Change Password Controller-->
         <scene sceneID="Jg9-CS-pm8">
@@ -1529,7 +1529,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aAz-pQ-tcl" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="SEN-JW-qCC" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="1944.9275362318842" y="2998.6607142857142"/>
+            <point key="canvasLocation" x="-372" y="3024"/>
         </scene>
     </scenes>
     <resources>
@@ -1542,7 +1542,7 @@
         <image name="store(1)" width="23" height="23"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="Kqp-az-Zl9"/>
+        <segue reference="LAx-na-B30"/>
     </inferredMetricsTieBreakers>
     <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
 </document>
