--- a/notritionVendorsAPP/View/Base.lproj/Main.storyboard
+++ b/notritionVendorsAPP/View/Base.lproj/Main.storyboard
@@ -175,7 +175,7 @@
                         <segue destination="QZb-0J-Nu3" kind="relationship" relationship="viewControllers" id="d7A-Ep-MnC"/>
                         <segue destination="sHg-wU-7nF" kind="relationship" relationship="viewControllers" id="eKp-Fv-hKF"/>
                         <segue destination="0LH-PA-krd" kind="relationship" relationship="viewControllers" id="Ni5-Dc-RiU"/>
-                        <segue destination="JW7-JX-eQv" kind="relationship" relationship="viewControllers" id="4hM-vz-fZE"/>
+                        <segue destination="HI7-hs-oDW" kind="relationship" relationship="viewControllers" id="SjP-V2-4jT"/>
                         <segue destination="cUB-LF-Hav" kind="relationship" relationship="viewControllers" id="ES6-js-4rW"/>
                     </connections>
                 </tabBarController>
@@ -311,7 +311,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2CJ-ST-Wkd" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-460.86956521739131" y="2195.7589285714284"/>
+            <point key="canvasLocation" x="449.27536231884062" y="2195.7589285714284"/>
         </scene>
         <!--DetailFoodStoryboardID-->
         <scene sceneID="vgc-FG-C4U">
@@ -319,7 +319,7 @@
                 <viewControllerPlaceholder storyboardName="DetailFood" referencedIdentifier="DetailFoodStoryboardID" id="7q1-Xn-wef" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="MNA-ce-vHZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="375" y="2208"/>
+            <point key="canvasLocation" x="1284.0579710144928" y="2207.8125"/>
         </scene>
         <!--LoginLogoutStoryboardID-->
         <scene sceneID="1SL-bZ-tAl">
@@ -327,7 +327,7 @@
                 <viewControllerPlaceholder storyboardName="LogInAndLogOut" referencedIdentifier="LoginLogoutStoryboardID" id="zxw-JI-5Xv" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Grh-Wk-v9I" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="301" y="2421"/>
+            <point key="canvasLocation" x="1210.144927536232" y="2420.7589285714284"/>
         </scene>
         <!--AccountDetailStoryboardID-->
         <scene sceneID="kZW-uL-rBr">
@@ -335,7 +335,7 @@
                 <viewControllerPlaceholder storyboardName="AccountDetail" referencedIdentifier="AccountDetailStoryboardID" id="8ap-Zq-13Y" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7kK-fE-kxM" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3039.8550724637685" y="2625.6696428571427"/>
+            <point key="canvasLocation" x="3950.0000000000005" y="2625.6696428571427"/>
         </scene>
         <!--LoginLogoutStoryboardID-->
         <scene sceneID="Uqc-JC-CBG">
@@ -859,22 +859,6 @@
             </objects>
             <point key="canvasLocation" x="-1371" y="670"/>
         </scene>
-        <!--Chat-->
-        <scene sceneID="C7x-FZ-6oP">
-            <objects>
-                <viewController id="JW7-JX-eQv" customClass="ChannelsViewController" customModule="notritionVendorsAPP" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="rfO-3E-XVp">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <viewLayoutGuide key="safeArea" id="dal-df-Ece"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="Chat" image="messenger(1)" id="W4h-4h-lT3"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="9bX-YN-9uG" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-3396" y="2484"/>
-        </scene>
         <!--Favorites-->
         <scene sceneID="Z4V-Ef-bG8">
             <objects>
@@ -901,7 +885,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4LE-d0-WR0" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1371.0144927536232" y="2196.4285714285711"/>
+            <point key="canvasLocation" x="-460.86956521739131" y="2195.7589285714284"/>
         </scene>
         <!--Account Controller-->
         <scene sceneID="Pvf-3K-9Vz">
@@ -981,7 +965,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="oXM-62-nyg" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3768.115942028986" y="2844.6428571428569"/>
+            <point key="canvasLocation" x="4678.2608695652179" y="2844.6428571428569"/>
         </scene>
         <!--Shop-->
         <scene sceneID="Y4g-FC-RLh">
@@ -1146,7 +1130,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="lpk-he-fh5" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1455" y="2999"/>
+            <point key="canvasLocation" x="-544.92753623188412" y="2998.6607142857142"/>
         </scene>
         <!--Edit Infor User Controller-->
         <scene sceneID="7Fy-3z-Gjo">
@@ -1414,7 +1398,7 @@
                 <viewControllerPlaceholder storyboardName="Comment" referencedIdentifier="CommentStoryboardID" id="Hhs-xT-Xtj" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xPv-Zd-KoX" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-549" y="2626"/>
+            <point key="canvasLocation" x="360.86956521739131" y="2625.6696428571427"/>
         </scene>
         <!--Change Password Controller-->
         <scene sceneID="Jg9-CS-pm8">
@@ -1529,7 +1513,25 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aAz-pQ-tcl" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="SEN-JW-qCC" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="-372" y="3024"/>
+            <point key="canvasLocation" x="537.68115942028987" y="3023.4375"/>
+        </scene>
+        <!--Chat-->
+        <scene sceneID="cpa-ps-C8J">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="HI7-hs-oDW" customClass="ChatNavigationController" customModule="notritionVendorsAPP" customModuleProvider="target" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Chat" image="messenger(1)" id="r8i-VU-7ZY"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" barStyle="black" id="Bqr-ul-tZE">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" red="0.77647058820000003" green="0.0039215686269999999" blue="0.1019607843" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="barTintColor" red="0.77647058820000003" green="0.0039215686269999999" blue="0.1019607843" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="2E5-a1-twy" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-3600.0000000000005" y="2489.7321428571427"/>
         </scene>
     </scenes>
     <resources>
@@ -1543,7 +1545,7 @@
         <image name="store(1)" width="23" height="23"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="LAx-na-B30"/>
+        <segue reference="WYP-LC-rZ2"/>
     </inferredMetricsTieBreakers>
     <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
 </document>
